fix scrollbar on left side in popovers

--- a/src/components/ChatContent/ChatContent.scss
+++ b/src/components/ChatContent/ChatContent.scss
@@ -1,3 +1,14 @@
+// Possible bug in PerfectScrollbars putting scrollbar on the left side
+.popover-container-content,
+.chat-content-scroll-container {
+  .react-autoql-custom-scrollbars {
+    .ps__rail-y {
+      right: 0px !important;
+      left: unset !important;
+    }
+  }
+}
+
 .drawer-content-wrapper {
   .drawer-content {
     .chat-content-scroll-container {
@@ -7,14 +18,6 @@
       padding-bottom: 158px;
       background-color: var(--react-autoql-background-color-primary);
       overflow-x: hidden;
-
-      // Possible bug in PerfectScrollbars putting scrollbar on the left side
-      .react-autoql-custom-scrollbars {
-        .ps__rail-y {
-          right: 0px !important;
-          left: unset !important;
-        }
-      }
 
       .chat-content-container {
         overflow: hidden;
